{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 124,
  "lineage": "24e33a77-c1e9-8189-bda5-01f1f0c50299",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/networkInterfaces/MyNic",
            "ip_configuration": [
              {
                "name": "MyNicConfig",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/publicIPAddresses/MyStaticIP",
                "subnet_id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/virtualNetworks/MyVirtualNetwork/subnets/MyFirstSubnet"
              }
            ],
            "location": "ukwest",
            "name": "MyNic",
            "network_security_group_id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/networkSecurityGroups/MySecurityNetwork",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "newResource"
          },
          "depends_on": [
            "azurerm_network_security_group.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/networkSecurityGroups/MySecurityNetwork",
            "location": "ukwest",
            "name": "MySecurityNetwork",
            "resource_group_name": "newResource",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/networkSecurityGroups/MySecurityNetwork/securityRules/http_access_rule",
            "name": "http_access_rule",
            "network_security_group_name": "MySecurityNetwork",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "newResource",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/networkSecurityGroups/MySecurityNetwork/securityRules/https_access_rule",
            "name": "https_access_rule",
            "network_security_group_name": "MySecurityNetwork",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "newResource",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "port8080_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/networkSecurityGroups/MySecurityNetwork/securityRules/8080_access_rule",
            "name": "8080_access_rule",
            "network_security_group_name": "MySecurityNetwork",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "newResource",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/networkSecurityGroups/MySecurityNetwork/securityRules/ssh_access_rule",
            "name": "ssh_access_rule",
            "network_security_group_name": "MySecurityNetwork",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "newResource",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/publicIPAddresses/MyStaticIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.140.252.217",
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "MyStaticIP",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "newResource",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/virtualNetworks/MyVirtualNetwork/subnets/MyFirstSubnet",
            "name": "MyFirstSubnet",
            "resource_group_name": "newResource",
            "virtual_network_name": "MyVirtualNetwork"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/85e7f6e0-3f28-46fe-8898-f8f8f10265cf/resourceGroups/newResource/providers/Microsoft.Network/virtualNetworks/MyVirtualNetwork",
            "location": "ukwest",
            "name": "MyVirtualNetwork",
            "resource_group_name": "newResource"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}